# hackaton

./: .env.example  .gitattributes  .gitignore  README.md  TECHNICAL_REPORT.md  alt_linux_setup.sh  fix_after_windows_copy.py  kali_setup.sh  pyproject.toml  requirements.txt  setup.sh  setup_alt.sh  setup_kali.sh  setup_thunar.sh  test_sync.db  ubuntu_test.sh  yandex_test.db
.run/cloudbridge/: state.db
cloudbridge/: __init__.py  __main__.py  config.py  fuse_fs.py  gui_app.py  gvfs.py  hybrid_manager.py  models.py  state_db.py  sync_engine.py  tray.py  watcher.py
cloudbridge/provider/: __init__.py  base.py  nextcloud.py  yandex.py
docs/: architecture_overview.md  install_alt_linux.md  install_linux.md  micro_solutions.md  package_linux.md  roadmap.md
docs/adr/: 001-python-nautilus.md  002-hybrid-view.md  003-sqlite-state.md  (+8 more)
scratch/: cloudbridge_nautilus_extension.py  install_mime_opener.py  install_nautilus_extension.py  install_thunar_action.py  run_daemon.sh  test_creation_and_sync.py  test_yandex_connection.py  verify_core.py  write_cloudbridge_env.py
scripts/: build-linux-package.sh  install-linux.sh
src/: cloud_open.py  config.py  keep_local.py  main.py  open_or_default.py  restore_cloud.py  share_link.py  tray_app.py
tests/: test_cli.py  test_config.py  test_fuse_fs.py  test_gui.py  test_gvfs.py  test_hybrid.py  test_hybrid_manager.py  test_integration.py  test_nextcloud.py  test_nextcloud_provider.py  test_notifications.py  test_setup.py  test_state.py  test_state_db.py  test_sync.py  test_sync_engine.py  test_watcher.py  test_yandex_provider.py
(+31 files in other folders)
