[project]
name = "cloudbridge"
version = "0.1.0"
description = "CloudBridge hybrid local/cloud synchronization prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.5",
  "aiosqlite>=0.20.0",
  "watchdog>=4.0.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]
fuse = [
  "pyfuse3>=3.4.0",
  "pyfuse3-asyncio>=0.1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
